fix contact screen layout issues

--- a/css/contact.css
+++ b/css/contact.css
@@ -1,6 +1,6 @@
 #herotext a {
   padding: 10px 16px;
-  margin: 0px 10px;
+  margin: 10px 10px;
   font-size: 18px;
   line-height: 1.3333333;
   border: 1px solid #42dca3;
@@ -20,9 +20,25 @@
 
 .flex {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.flex p {
+  width: 100%;
 }
 
 #herotext {
-  /*width: 80%;
-  display: flex;*/
+  margin: 0;
+  padding: 0;
+  width: 80%;
+  text-align: left;
+  align-self: center;
+  display: flex;
+}
+
+@media only screen and (max-width: 700px) {
+  #herotext {
+    width: 90%;
+  }
 }
