--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ nav {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
+  justify-content: center;
   background: linear-gradient(to bottom, black, darkgrey);
 }
 
